--- a/src/index.html
+++ b/src/index.html
@@ -1,9 +1,9 @@
 <!doctype html>
 <html>
 <head id="head">
-  <!-- <meta charset="UTF-8">
+  <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="./../dist/output.css" rel="stylesheet"> -->
+  <link href="./../dist/output.css" rel="stylesheet">
 </head>
 <body id="body" onload()>
   <!-- <h1 class="text-5xl font-bold  underline">
@@ -142,7 +142,7 @@
                 document.getElementById('body').addEventListener('click',function(e){
                   document.getElementById('head').innerHTML=`                  <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="./../dist/output.css" rel="stylesheet">`
+  <script src="https://cdn.tailwindcss.com"></script>`
           })
                   
         //   }
