--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
        <script>
-               window.location.replace("https://tender-panini-415380.netlify.app/src/index.html");
+               window.location.replace("../src/index.html");
        </script>
 </body>
 </html>
