--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
         <!-- <title>Document</title> -->
 </head>
 <body>
-       <script>
+       <!-- <script>
                window.location.replace("../src/index.html");
-       </script>
+       </script> -->
 </body>
 </html>
