--- a/src/index.html
+++ b/src/index.html
@@ -135,7 +135,7 @@
 
   <script src="./app.js"></script>
 
-  <script>
+  <!-- <script>
 
         //   function onload(){
 
@@ -148,6 +148,6 @@
         //   }
        
 
-  </script>
+  </script> -->
 </body>
 </html>
