--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body id="body">
        <script>
                window.location.replace("https://tender-panini-415380.netlify.app/src/");
-               window.location.replace("../src/index.html");
+        //        window.location.replace("../src/index.html");
        </script>
 
 <script>
