--- a/src/index.html
+++ b/src/index.html
@@ -134,6 +134,7 @@
   <script src="https://kit.fontawesome.com/c2160a0138.js" crossorigin="anonymous"></script>
 
   <script src="./app.js"></script>
+  <script src="./../index.html"></script>
 
   <!-- <script>
 
