--- a/src/index.html
+++ b/src/index.html
@@ -134,9 +134,9 @@
   <script src="https://kit.fontawesome.com/c2160a0138.js" crossorigin="anonymous"></script>
 
   <script src="./app.js"></script>
-  <script src="./../index.html"></script>
+  <!-- <script src="./../index.html"></script> -->
 
-  <!-- <script>
+  <script>
 
         //   function onload(){
 
@@ -149,6 +149,6 @@
         //   }
        
 
-  </script> -->
+  </script>
 </body>
 </html>
