--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
   <!-- <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="./../dist/output.css" rel="stylesheet"> -->
+  <script src="head.js"></script>
 </head>
 <body id="body">
   <!-- <h1 class="text-5xl font-bold  underline">
